Rename local variable label to sourceLabel in createModuleAction() so it doesn't collide with member variable label in following refactoring.
PiperOrigin-RevId: 748262414
Change-Id: I1007fe82a22617f719a9f6e1b687156ef7e58f7b